fix mobile view overflow issue
mobile overflow issue seems to be resolved

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 
 .navbar-links li {
     list-style: none;
+    transition: .3s ease-out;
 }
 
 .navbar-links li a {
@@ -58,11 +59,13 @@ body {
     color: white;
     padding: 1rem;
     display: block;
+    
 }
 
 .navbar-links li:hover {
-    background-color: rgb(255, 0, 0);
+    background-color: lime;
     color: white;
+    transition: .1s ease-in;
 }
 
 .toggle-button {
@@ -103,6 +106,9 @@ in order to get the menu to appear and reappear when the screen size changes, we
     .navbar-links ul {
         width: 100%;
         flex-direction: column;
+        position: absolute;
+        background-color: black;
+        transition: all .5s ease;
     }
 
     .navbar-links ul li {
@@ -138,6 +144,12 @@ in order to get the menu to appear and reappear when the screen size changes, we
     max-width: 60%;
 }
 
+@media (max-width: 651px) {
+    .hero {
+        margin: 0px;
+    }
+}
+
 /*footer stuff*/
 footer {
     margin-top: auto;
@@ -164,14 +176,32 @@ footer {
     }
 }
 
-/*images*/
+/*action bar*/
 .action {
-    background-color: white;
+    padding: none;
     text-align: center;
     background: linear-gradient(to right, rgb(255, 0, 0), rgb(255, 251, 0));
     font-size: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+    transition: .1s ease-out;
+   
 }
 
+.action-stuff {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.action:hover {
+    transition: .1s ease-in;
+    
+}
+
+/*images*/
 .picture-section {
     background-color: white;
     text-align: center;
